# care-plugin-format

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: index.md  installation.md  usage.md
src/care_plugin/: __init__.py  apps.py  settings.py  signals.py  tasks.py  urls.py
src/care_plugin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/care_plugin/api/: viewsets.py
src/care_plugin/models/: care_plugin_model.py
tests/: __init__.py  test_care_hello.py
